[project]
name = "scale-agents"
version = "1.0.0"
description = "IBM Storage Scale AI Agents for BeeAI AgentStack - Multi-agent system for storage administration"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "IBM Storage Team" },
]
keywords = [
    "ibm",
    "storage-scale",
    "gpfs",
    "agents",
    "ai",
    "mcp",
    "agentstack",
    "beeai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "agentstack-sdk>=0.4.0",
    "a2a>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
    "orjson>=3.9.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
# LLM reasoning with BeeAI Framework
llm = [
    "beeai-framework>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
    "httpx[http2]>=0.27.0",
    "types-PyYAML>=6.0.0",
]
all = [
    "scale-agents[llm,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scale-agents = "scale_agents.server:run"
server = "scale_agents.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/scale_agents"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["scale_agents"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "a2a.*",
    "agentstack_sdk.*",
    "beeai_framework.*",
    "yaml",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=scale_agents --cov-report=term-missing"

[tool.coverage.run]
source = ["src/scale_agents"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
